# stull-atlas

./: .env.dev  .env.example  .env.prod  .env.rje  .gitignore  .howell.json  404.html  CNAME  LICENSE  README.md  _check_deploy.py  _check_out.txt  _mat_list.txt  _mat_sample.txt  _redirects  _usage.txt  add_descriptions.py  index.html  list_titles.py  list_titles2.py  package-lock.json  package.json  playwright.config.ts  project.json  sw.js  vite.config.ts
assets/: AboutPage-CZvBZv16.js  AboutPage-Dd9MNvcc.js  AboutPage-ESEBvR6I.js  AboutPage-P2gqnYf-.js  AboutPage-TUJKdaD0.js  AboutPage-i0NZU33q.js  AuthModal-1iAcWIQ0.js  AuthModal-CkmXedy_.js  AuthModal-CurStVju.js  AuthModal-Xt3bW5bL.js  AuthModal-qEl_HyOq.js  BiaxialBlendPage--xl4TBGk.js  BiaxialBlendPage-BAznRFJ-.js  BiaxialBlendPage-BfU85ztX.js  BiaxialBlendPage-Bsnwmcka.js  BiaxialBlendPage-CTcHMG94.js  BlendLauncher-BNLXdh8s.js  BlendLauncher-CSKusudG.js  CalculatorsPage-BMVsUl7M.js  CalculatorsPage-D8LNRkd6.js  CalculatorsPage-DHUuBI1c.js  CalculatorsPage-DMO0FHee.js  CalculatorsPage-U5uPHD_d.js  ComparePanel-CVgh3RLY.js  ComparePanel-CYxR2KXm.js  ComparePanel-D0QpnKE_.js  ComparePanel-D5vB-OOe.js  ComparePanel-DLiKCIWG.js  ComparePanel-RHtLlqmz.js  ExplorerPage-6Y5s7sAP.js  ExplorerPage-BjfbME7b.js  ExplorerPage-CVvnvK-5.js  ExplorerPage-CWrdHk9V.js  ExplorerPage-Cmri80q5.js  ExplorerPage-SgKBRTkw.js  FluxTriaxialPage-B2vyFgvf.js  FluxTriaxialPage-BllPN59K.js  FluxTriaxialPage-BtP0037x.js  (+183 more)
e2e/: app.spec.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+1825 files in other folders)
