[package]
name = "stull-atlas"
version = "3.3.1"
description = "Stull Atlas — Ceramic Glaze Explorer"
authors = ["Stull Atlas"]
license = ""
repository = ""
default-run = "stull-atlas"
edition = "2021"

[lib]
name = "stull_atlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
