[package]
name = "stull-atlas"
version = "3.3.1"
description = "Stull Atlas — Ceramic Glaze Explorer"
authors = ["Stull Atlas"]
license = ""
repository = ""
default-run = "stull-atlas"
edition = "2021"

[lib]
name = "stull_atlas_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }

[profile.release]
strip = true        # Strip debug symbols from binary
lto = true           # Link-time optimization — slower build, smaller binary
codegen-units = 1    # Single codegen unit — better optimization
opt-level = "s"      # Optimize for size over speed
panic = "abort"      # No unwinding overhead
